[package]
name = "Ilinaya-SMPP-TLS-Proxy"
version = "1.0.1"
edition = "2024"
description = "SMPP TLS proxy for secure SMPP connections"
authors = ["Alexey Ilinskiy <alexey@ilinaya.com>"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.26.2"
rustls = "0.23.27"
rustls-pemfile = "2.0"
prometheus = "0.14.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
once_cell = "1.19"
base64 = "0.22.1"
dotenv = "0.15"
